--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Glass Websites</title>
   </head>
   <body>
     <main>
-      <div class="glass">
+      <section class="glass">
         <div class="dashboard">
           <div class="user">
             <img src="images/avatar.png" alt="" />
@@ -39,7 +43,43 @@
             <img src="images/controller.png" alt="" />
           </div>
         </div>
-      </div>
+
+        <div class="games">
+          <div class="status">
+            <h1>Active Games</h1>
+            <input type="text" />
+          </div>
+          <div class="cards">
+            <div class="card">
+              <img src="images/assassins.png" alt="" />
+              <div class="card-info">
+                <h2>Assasins Creed Valhalla</h2>
+                <p>PS 5 Version</p>
+                <div class="progress"></div>
+              </div>
+              <div class="percentage">60%</div>
+            </div>
+            <div class="card">
+              <img src="images/sackboy.png" alt="" />
+              <div class="card-info">
+                <h2>Sackboy A Great Advanture</h2>
+                <p>PS 5 Version</p>
+                <div class="progress"></div>
+              </div>
+              <div class="percentage">60%</div>
+            </div>
+            <div class="card">
+              <img src="images/spiderman.png" alt="" />
+              <div class="card-info">
+                <h2>Spiderman Miles Morales</h2>
+                <p>PS 5 Version</p>
+                <div class="progress"></div>
+              </div>
+              <div class="percentage">60%</div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <div class="circle1"></div>
     <div class="circle2"></div>
